--- a/app/index.html
+++ b/app/index.html
@@ -47,13 +47,13 @@
         <h3>About</h3>
         <p class="statement">Dane is a front-end developer.</p>
         <div class="social-bar flow-text">
-          <a href="github" class="social-links col s4">
+          <a href="https://github.com/zenki14" class="social-links col s4">
             <i class="fa fa-github large"></i>
           </a>
-          <a href="linkedin" class="social-links col s4">
+          <a href="https://www.linkedin.com/in/dworsham" class="social-links col s4">
             <i class="fa fa-linkedin-square large"></i>
           </a>
-          <a href="soundcloud" class="social-links col s4">
+          <a href="https://soundcloud.com/revo909" class="social-links col s4">
             <i class="fa fa-soundcloud large"></i>
           </a>
         </div>
@@ -111,16 +111,28 @@
       </section>
       <hr>
       <section id="contact">
-        <div class="row center-align">
+        <div class="center-align valign-wrapper">
 
-          <div class="col s4">
+          <div class="col s4 view view-tenth valign">
             <i class="fa fa-envelope-square large"></i>
+            <div class="mask">
+              <h2>Email</h2>
+              <p>Send Dane an email @ <a href="mailto:zenki14@gmail.com">zenki14@gmail.com</a>.</p>
+            </div>
           </div>
-          <div class="col s4">
+          <div class="col s4 view view-tenth valign">
             <i class="fa fa-phone-square large"></i>
+            <div class="mask">
+              <h2>Phone</h2>
+              <p>Call Dane @ 352.804.2650.</p>
+            </div>
           </div>
-          <div class="col s4">
+          <div class="col s4 view view-tenth valign">
             <i class="fa fa-rss-square large"></i>
+            <div class="mask">
+              <h2>Blog</h2>
+              <p>Revised Blog is coming soon.</p>
+            </div>
           </div>
 
         </div>
