Updated js for nav and updated favicon

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css" />
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/favicon/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png">
+    <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body id="body">
     <header>
@@ -18,10 +37,10 @@
       </a>
       <nav>
         <ul id="nav">
-          <li><a href="#skills" class="goto">Skills & Experience</a></li>
-          <li><a href="#work" class="goto">Work</a></li>
-          <li><a href="#about" class="goto selected">About</a></li>
           <li><a href="#body" class="goto selected">Home</a></li>
+          <li><a href="#about" class="goto selected">About</a></li>
+          <li><a href="#work" class="goto">Work</a></li>
+          <li><a href="#skills" class="goto">Skills <br>& Experience</a></li>
         </ul>
       </nav>
     </header>
@@ -83,7 +102,7 @@
           <li class="clients"><p class="skills"><span class="skillstitle">Restful APIs:</span> Interacting with external API's via AJAX</p></li>
           <li class="clients"><p class="skills"><span class="skillstitle">Parse and Firebase:</span> Javascript SDK</p></li>
           <li class="clients"><p class="skills"><span class="skillstitle">Testing tools:</span> Jasmine, Mocha, Chai</p></li>
-          
+
         </ul>
         <ul class="four_up tiles animateme" data-when="exit" data-from="0.2" data-to="0" data-opacity="0" data-translatex="50" data-rotatez="0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">
           <li class="clients"><p class="skills"><span class="skillstitle">Node.JS basics:</span> Heroku deployment, DivShot deployment and Node Package Manager</p></li>
@@ -104,7 +123,7 @@
           DJ - I worked as a DJ for many years. It's been one of the constants in my life. Music has a large impact on my work.
         </div>
         <div class="iron-yard">
-          Iron Yard - Attended TIY's front end engineering course. 
+          Iron Yard - Attended TIY's front end engineering course.
         </div>
       </section>
 
