added some breaks and some a tags

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
     <main>
       <section id="about">
         <h4>Hi, I'm Dane</h4>
-        <p>I'm a man of many skills, but my focus now is to become a great frontend web developer. I just graduated from the Iron Yard and I'm looking for a great opportunity to grow and make great things.</p>
+        <p>I'm a man of many skills, but my focus now is to become a great front-end web developer. I just finished the Iron Yard (a high intensity code school) and I'm looking for a great opportunity to grow and make great things.</p>
         <div class="socialbar">
           <a href="https://www.linkedin.com/in/dworsham" class="sociallinks" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="https://github.com/zenki14" class="sociallinks" target="_blank"><i class="fa fa-github"></i></a>
@@ -80,6 +80,7 @@
         <div class="work">
           <h2>Surf and Paddle Website</h2>
           <p>This was an Iron Yard homework assignment where we had to do a pixel perfect website based on a PSD (Photoshop Document). This was made using HTML and CSS.</p>
+          <a href="http://zenki14.github.io/Surf_Paddle/">Check it out!</a>
         </div>
         <div class="work">
           <h2>Fan Tracker</h2>
@@ -93,10 +94,10 @@
 
       <section id="skills">
         <h3>Skills</h3>
-        <p>HTML/CSS: SASS/LESS, Bourbon/Neat. CSS/HTML Frameworks: Twitter Bootstrap,
-    Foundation, Material Design and HTML5 Boilerplate.</p>
+        <p>HTML/CSS: SASS/LESS, Bourbon/Neat. CSS/HTML Frameworks: Twitter Bootstrap,Foundation, Material Design and HTML5 Boilerplate.</p>
         <p>Javascript Libraries: Meteor, Angular, jQuery, Underscore.js - interested in learning other MVC frameworks (React, Ember, Knockout etc), exposure to Coffeescript and Typescript.</p>
         <p>UX/UI: Have a good eye for design. Familar with responsive Web Design - media queries, fully functional layouts across all screen sizes.</p>
+        <br>
         <ul class="four_up tiles clients_list animateme" data-when="exit" data-from="0.2" data-to="0" data-opacity="0" data-translatex="-50" data-rotatez="0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">
           <li class="clients"><p class="skills"><span class="skillstitle">Development tools:</span> Gulp, Yeoman, Bower, NPM, Iron for Meteor.js</p></li>
           <li class="clients"><p class="skills"><span class="skillstitle">Restful APIs:</span> Interacting with external API's via AJAX</p></li>
@@ -112,16 +113,21 @@
 
       <section id="experience">
         <h3>Experience</h3>
-        <a href="">Download resume here</a>
+        <a href="">Interested in my Resume? Click me!</a>
+        <br>
+        <br>
         <div class="shipping">
           Shipping - I worked for a large American Muscle Car restoration parts warehouse. It was a full time shipping job that I had for just over a year before deciding to change careers and devote myself to something new.
         </div>
+        <br>
         <div class="property">
           Property Manager - I managed properties the my family owned and rented out. I was responsible for the landscape maintenance and repairing anything that required it (paint, appliance repair and installation, screen work, etc.).
         </div>
+        <br>
         <div class="djing">
           DJ - I worked as a DJ for many years. It's been one of the constants in my life. Music has a large impact on my work.
         </div>
+        <br>
         <div class="iron-yard">
           Iron Yard - Attended TIY's front end engineering course.
         </div>
