--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
 
       <section id="experience">
         <h3>Experience</h3>
-        <a href="">Interested in my Resume? Click me!</a>
+        <a href="portfolio1/app/Resume.pdf">Interested in my Resume? Click me!</a>
         <br>
         <br>
         <div class="shipping">
