more grammar fixes

--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
         </div>
         <br>
         <div class="property">
-          Property Manager - I managed properties the my family owned and rented out. I was responsible for the landscape maintenance and repairing anything that required it (paint, appliance repair and installation, screen work, etc.).
+          Property Manager - I managed properties that my family owned and rented out. I was responsible for the landscape maintenance and repairing anything that required it (paint, appliance repair and installation, screen work, etc.).
         </div>
         <br>
         <div class="djing">
