--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
 
       <section id="skills">
         <h3>Skills</h3>
-        <p>HTML/CSS: SASS/LESS, Bourbon/Neat. CSS/HTML Frameworks: Twitter Bootstrap,Foundation, Material Design and HTML5 Boilerplate.</p>
+        <p>HTML/CSS: SASS/LESS, Bourbon/Neat. CSS/HTML Frameworks: Twitter Bootstrap, Foundation, Material Design and HTML5 Boilerplate.</p>
         <p>Javascript Libraries: Meteor, Angular, jQuery, Underscore.js - interested in learning other MVC frameworks (React, Ember, Knockout etc), exposure to Coffeescript and Typescript.</p>
         <p>UX/UI: Have a good eye for design. Familar with responsive Web Design - media queries, fully functional layouts across all screen sizes.</p>
         <br>
@@ -113,7 +113,7 @@
 
       <section id="experience">
         <h3>Experience</h3>
-        <a href="portfolio1/app/Resume.pdf">Interested in my Resume? Click me!</a>
+        <a href="Resume.pdf">Interested in my Resume? Click me!</a>
         <br>
         <br>
         <div class="shipping">
@@ -121,7 +121,7 @@
         </div>
         <br>
         <div class="property">
-          Property Manager - I managed properties the my family owned and rented out. I was responsible for the landscape maintenance and repairing anything that required it (paint, appliance repair and installation, screen work, etc.).
+          Property Manager - I managed properties my family owned and rented out. I was responsible for the landscape maintenance and repairing anything that required it (paint, appliance repair and installation, screen work, etc.).
         </div>
         <br>
         <div class="djing">
